set (solver_files
    model.cpp
    boundary_condition.cpp
    constraint.cpp
    data_exporter.cpp
    element_container.cpp
    element.cpp
    element_discrete.cpp
    element_fiber.cpp
    element_ldpm.cpp
    element_continuous.cpp
    element_polyhedral.cpp
    geometry.cpp
    globals.cpp
    linalg.cpp
    #linear_algebra.cpp
    #main.cpp
    material_container.cpp
    material_coulomb_friction.cpp
    material.cpp
    material_fiber.cpp
    material_misc.cpp
    material_slide_3_2.cpp
    material_rve.cpp
    material_mars.cpp
    material_ldpm.cpp
    material_fatigue.cpp
    node_container.cpp
    node.cpp
    solver.cpp
    vtk_exporter.cpp
    exporter_model.cpp
    constraint.cpp
    preprocessing_block.cpp
    function.cpp
    indirect_displ_control.cpp
    shape_functions.cpp
    integration.cpp
    simplex.cpp
    material_htc.cpp
    )

add_library(solver
    ${LIB_TYPE}
    ${solver_files}
    )
